force-app/main/default/objects/Non_Torc_User__c/Non_Torc_User__c.object-meta.xml
<CustomObject>
    <label>Non Torc User</label>
    <nameField>
        <label>Non Torc User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Non Torc Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>