force-app/main/default/objects/Non_Torc_User__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Non Torc Users</relationshipLabel>
    <relationshipName>Non_Torc_Users</relationshipName>
    <type>Lookup</type>
</CustomField>