force-app/main/default/objects/Non_Torc_User__c/fields/AutoNumber__c.field-meta.xml
<CustomField>
    <fullName>AutoNumber__c</fullName>
    <displayFormat>{000000000}</displayFormat>
    <label>AutoNumber</label>
    <type>AutoNumber</type>
</CustomField>