force-app/main/default/objects/Non_Torc_User__c/fields/Custom_Memo_On_Payment__c.field-meta.xml
<CustomField>
    <fullName>Custom_Memo_On_Payment__c</fullName>
    <label>Custom Memo On Payment</label>
    <type>TextArea</type>
</CustomField>