force-app/main/default/objects/Non_Torc_User__c/fields/Default_Monthly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Default_Monthly_Rate__c</fullName>
    <label>Default Monthly Rate</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>