force-app/main/default/objects/Non_Torc_User__c/fields/Docusign_Status__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Status__c</fullName>
    <formula>IF( Explicit_Docusign_Mark_Complete__c ,&apos;Completed&apos;,
IF( Latest_DocuSign_Status__c = NULL,&apos;Not Sent&apos;,  Latest_DocuSign_Status__r.dfsle__Status__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Docusign Status</label>
    <type>Text</type>
</CustomField>