force-app/main/default/objects/Non_Torc_User__c/fields/Docusign_Subject__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Subject__c</fullName>
    <formula>&apos;Torc:Qubika &apos;+ Name +&apos; Engagement&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Docusign Subject</label>
    <type>Text</type>
</CustomField>