force-app/main/default/objects/Non_Torc_User__c/fields/Email_List__c.field-meta.xml
<CustomField>
    <fullName>Email_List__c</fullName>
    <formula>IF(Email__c = Official_Email__c ,&apos;&apos;,Official_Email__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email List</label>
    <type>Text</type>
</CustomField>