force-app/main/default/objects/Non_Torc_User__c/fields/Engagement_Months__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Months__c</fullName>
    <defaultValue>12</defaultValue>
    <label>Engagement Months</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>