force-app/main/default/objects/Non_Torc_User__c/fields/Expense_Message__c.field-meta.xml
<CustomField>
    <fullName>Expense_Message__c</fullName>
    <formula>IF(OR( Monthly_USD_Expense__c =NULL,Monthly_USD_Expense__c=0),&apos;&apos;,
&apos;* The resource is eligible for a monthly expense of &apos;+ TEXT(Monthly_USD_Expense__c) +&apos; USD.&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expense Message</label>
    <type>Text</type>
</CustomField>