force-app/main/default/objects/Non_Torc_User__c/fields/Explicit_Docusign_Mark_Complete__c.field-meta.xml
<CustomField>
    <fullName>Explicit_Docusign_Mark_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Explicit Docusign Mark Complete</label>
    <type>Checkbox</type>
</CustomField>