force-app/main/default/objects/Non_Torc_User__c/fields/Family_Name__c.field-meta.xml
<CustomField>
    <fullName>Family_Name__c</fullName>
    <label>Family Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>