force-app/main/default/objects/Non_Torc_User__c/fields/First_Month__c.field-meta.xml
<CustomField>
    <fullName>First_Month__c</fullName>
    <label>Engagement Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>