force-app/main/default/objects/Non_Torc_User__c/fields/First_Month_Amount_Prorated__c.field-meta.xml
<CustomField>
    <fullName>First_Month_Amount_Prorated__c</fullName>
    <label>First Month Amount(Prorated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>