force-app/main/default/objects/Non_Torc_User__c/fields/First_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Payment_Date__c</fullName>
    <formula>If( NOT(ISNULL(Payment_Start_Date__c)),
Payment_Start_Date__c
,
DATE(Year( DATEVALUE(CreatedDate) ),Month( DATEVALUE(CreatedDate) )+1,1) -1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Payment Date</label>
    <type>Date</type>
</CustomField>