force-app/main/default/objects/Non_Torc_User__c/fields/General_Description__c.field-meta.xml
<CustomField>
    <fullName>General_Description__c</fullName>
    <label>General Description</label>
    <length>10</length>
    <type>Text</type>
</CustomField>