force-app/main/default/objects/Non_Torc_User__c/fields/Last_Month__c.field-meta.xml
<CustomField>
    <fullName>Last_Month__c</fullName>
    <label>Last Month</label>
    <type>Date</type>
</CustomField>