force-app/main/default/objects/Non_Torc_User__c/fields/Latest_DocuSign_Envelope__c.field-meta.xml
<CustomField>
    <fullName>Latest_DocuSign_Envelope__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest DocuSign Envelope</label>
    <referenceTo>dfsle__Envelope__c</referenceTo>
    <relationshipLabel>Non Torc Users</relationshipLabel>
    <relationshipName>Non_Torc_Users</relationshipName>
    <type>Lookup</type>
</CustomField>