force-app/main/default/objects/Non_Torc_User__c/fields/Monthly_USD_Expense__c.field-meta.xml
<CustomField>
    <fullName>Monthly_USD_Expense__c</fullName>
    <label>Monthly USD Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>