force-app/main/default/objects/Non_Torc_User__c/fields/Official_Email__c.field-meta.xml
<CustomField>
    <fullName>Official_Email__c</fullName>
    <label>Official Email</label>
    <type>Email</type>
</CustomField>