force-app/main/default/objects/Non_Torc_User__c/fields/Onboarded_Complete__c.field-meta.xml
<CustomField>
    <fullName>Onboarded_Complete__c</fullName>
    <formula>AND (
Docusign_Status__c =&apos;Completed&apos;,
Trolley_Status__c =&apos;active&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Onboarded Complete</label>
    <type>Checkbox</type>
</CustomField>