force-app/main/default/objects/Non_Torc_User__c/fields/Onboarding_Status__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Status__c</fullName>
    <formula>IF( NOT(ISNULL(Termination_Date__c)) ,&apos;1.Terminated&apos;,
IF(AND (
Docusign_Status__c =&apos;Completed&apos;,
Trolley_Status__c =&apos;active&apos;
),&apos;2.Completed&apos;,&apos;3.Inactive&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Onboarding Status</label>
    <type>Text</type>
</CustomField>