force-app/main/default/objects/Non_Torc_User__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Data Developer</fullName>
            </value>
            <value>
                <fullName>Delivery Manager</fullName>
            </value>
            <value>
                <fullName>Engineering Developer</fullName>
            </value>
            <value>
                <fullName>Lead Mobile developer</fullName>
            </value>
            <value>
                <fullName>Location Manager</fullName>
            </value>
            <value>
                <fullName>Machine Learning Senior</fullName>
            </value>
            <value>
                <fullName>Mobile Developer</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Quality Assurance</fullName>
            </value>
            <value>
                <fullName>Talent Acquisition Specialist</fullName>
            </value>
            <value>
                <fullName>UX/UI Designer</fullName>
            </value>
            <value>
                <fullName>Site Reliability Engineering</fullName>
            </value>
            <value>
                <fullName>Firmware</fullName>
            </value>
            <value>
                <fullName>Cybersecurity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>