force-app/main/default/objects/Non_Torc_User__c/fields/Prorated_Description__c.field-meta.xml
<CustomField>
    <fullName>Prorated_Description__c</fullName>
    <formula>IF( OR(First_Month_Amount_Prorated__c =0,First_Month_Amount_Prorated__c =NULL),&apos;&apos;,
&apos;* The first payment will be prorated to $&apos;+
TEXT(First_Month_Amount_Prorated__c)
+&apos; to reflect the start date.&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prorated Description</label>
    <type>Text</type>
</CustomField>