force-app/main/default/objects/Non_Torc_User__c/fields/Sent_Termination_Doc__c.field-meta.xml
<CustomField>
    <fullName>Sent_Termination_Doc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent Termination Doc</label>
    <type>Checkbox</type>
</CustomField>