force-app/main/default/objects/Non_Torc_User__c/fields/Signed_Talent_Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>Signed_Talent_Agreement_Date__c</fullName>
    <label>Signed Talent Agreement Date</label>
    <type>Date</type>
</CustomField>