force-app/main/default/objects/Non_Torc_User__c/fields/Standard_Description__c.field-meta.xml
<CustomField>
    <fullName>Standard_Description__c</fullName>
    <formula>Name +&apos; will provide &apos;+TEXT( Position__c) +&apos; services to Qubika.   All payments will be received by the last working day of each month.&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Standard Description</label>
    <type>Text</type>
</CustomField>