force-app/main/default/objects/Non_Torc_User__c/fields/Termination_Subject__c.field-meta.xml
<CustomField>
    <fullName>Termination_Subject__c</fullName>
    <formula>&apos;Torc:Qubika &apos;+Name+&apos; Change Order&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Termination Subject</label>
    <type>Text</type>
</CustomField>