force-app/main/default/objects/Non_Torc_User__c/fields/Terms__c.field-meta.xml
<CustomField>
    <fullName>Terms__c</fullName>
    <formula>TEXT(Engagement_Months__c)+&apos; months starting &apos;+
LPAD(TEXT(MONTH(First_Month__c)),2,&apos;0&apos;)+&apos;/&apos;+
LPAD(TEXT(DAY(First_Month__c)),2,&apos;0&apos;)+&apos;/&apos;+
TEXT(YEAR(First_Month__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Terms</label>
    <type>Text</type>
</CustomField>