force-app/main/default/objects/Non_Torc_User__c/fields/Trolley_Creation_Requested__c.field-meta.xml
<CustomField>
    <fullName>Trolley_Creation_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trolley Creation Requested</label>
    <type>Checkbox</type>
</CustomField>