force-app/main/default/objects/Non_Torc_User__c/fields/Trolley_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Trolley_Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trolley Recipient</label>
    <referenceTo>Trolley_Recipient__c</referenceTo>
    <relationshipLabel>Non Torc Users</relationshipLabel>
    <relationshipName>Non_Torc_Users</relationshipName>
    <type>Lookup</type>
</CustomField>