force-app/main/default/objects/Non_Torc_User__c/fields/Trolley_Recipient_Country__c.field-meta.xml
<CustomField>
    <fullName>Trolley_Recipient_Country__c</fullName>
    <formula>Trolley_Recipient__r.Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trolley Recipient Country</label>
    <type>Text</type>
</CustomField>