force-app/main/default/objects/Non_Torc_User__c/fields/Trolley_Status__c.field-meta.xml
<CustomField>
    <fullName>Trolley_Status__c</fullName>
    <formula>IF( Trolley_Recipient__c = NULL,&apos;Not Created&apos;, Trolley_Recipient__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Profile</label>
    <type>Text</type>
</CustomField>